--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body{
 }
 
 .box:hover {
-    -webkit-box-transform: rotate(-7deg);
-    -moz-box-transform: rotate(-7deg);
-    -o-box-transform: rotate(-7deg);
-    transform: rotate(-7deg);
+    -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
 
 /* NAV */
@@ -66,12 +66,13 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 80vh;
 
 }
 
 .cover{
-    width: 20rem;
+    height: calc(80vh - 100px);
+    padding-top: 80px;
 }
 
 /* GRID */
